--- a/startup-accelerator-webpage.html
+++ b/startup-accelerator-webpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Horizon | Where Startups Reach New Heights</title>
+  <title>HORIZON | Where Startups Reach New Heights</title>
   <style>
     :root {
       --primary: #3a86ff;
@@ -495,7 +495,7 @@
       <nav>
         <div class="logo">
           <div class="logo-icon">H</div>
-          Horizon
+          HORIZON
         </div>
         <ul class="nav-links">
           <li><a href="#features">Features</a></li>
@@ -513,7 +513,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>Building the <span>Future</span> Together</h1>
-        <p>Horizon is where visionary founders transform groundbreaking ideas into world-changing companies. Our accelerator provides the capital, expertise, and network to help startups reach new heights.</p>
+        <p>HORIZON is where visionary founders transform groundbreaking ideas into world-changing companies. Our accelerator provides the capital, expertise, and network to help startups reach new heights.</p>
         <div class="hero-buttons">
           <button class="cta-button">Apply Now</button>
           <button class="secondary-button">Learn More</button>
@@ -526,7 +526,7 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-title">
-        <h2>Why Choose <span>Horizon</span></h2>
+        <h2>Why Choose <span>HORIZON</span></h2>
         <p>We provide everything you need to accelerate your startup's growth</p>
       </div>
       <div class="features-grid">
@@ -641,7 +641,7 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-column">
-          <h3>Horizon</h3>
+          <h3>HORIZON</h3>
           <ul class="footer-links">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Our Team</a></li>
@@ -678,7 +678,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 Horizon Accelerator. All rights reserved.</p>
+        <p>&copy; 2025 HORIZON Accelerator. All rights reserved.</p>
       </div>
     </div>
   </footer>
